Reformatting JacksonConfig Version bump Tests adn TestDataBuilderFactory