@@ -15,35 +15,14 @@
     <description>Spring based Phawtrix API</description>
 
     <properties>
-        <java.version>13</java.version>
+        <java.version>14</java.version>
+        <hivemq-client-version>1.2.0</hivemq-client-version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-webflux</artifactId>
-<!--            <exclusions>-->
-<!--                <exclusion>-->
-<!--                    <groupId>com.fasterxml.jackson.datatype</groupId>-->
-<!--                    <artifactId>jackson-datatype-jdk8</artifactId>-->
-<!--                </exclusion>-->
-<!--                <exclusion>-->
-<!--                    <groupId>com.fasterxml.jackson.core</groupId>-->
-<!--                    <artifactId>jackson-databind</artifactId>-->
-<!--                </exclusion>-->
-<!--                <exclusion>-->
-<!--                    <groupId>com.fasterxml.jackson.datatype</groupId>-->
-<!--                    <artifactId>jackson-datatype-jsr310</artifactId>-->
-<!--                </exclusion>-->
-<!--                <exclusion>-->
-<!--                    <artifactId>jackson-module-parameter-names</artifactId>-->
-<!--                    <groupId>com.fasterxml.jackson.module</groupId>-->
-<!--                </exclusion>-->
-<!--                <exclusion>-->
-<!--                    <groupId>org.springframework.boot</groupId>-->
-<!--                    <artifactId>spring-boot-starter-json</artifactId>-->
-<!--                </exclusion>-->
-<!--            </exclusions>-->
         </dependency>
         <dependency>
             <groupId>org.springdoc</groupId>
@@ -53,7 +32,12 @@
         <dependency>
             <groupId>com.hivemq</groupId>
             <artifactId>hivemq-mqtt-client</artifactId>
-            <version>1.2.0</version>
+            <version>${hivemq-client-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.hivemq</groupId>
+            <artifactId>hivemq-mqtt-client-reactor</artifactId>
+            <version>${hivemq-client-version}</version>
         </dependency>
         <dependency>
             <groupId>com.google.guava</groupId>
@@ -63,7 +47,6 @@
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
-            <version>2.8.6</version> <!-- check latest version for GSON -->
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -97,6 +80,11 @@
             <artifactId>reactor-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -105,20 +93,19 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-<!--                    <excludeGroupIds>com.fasterxml.jackson.core</excludeGroupIds>-->
-<!--                    <excludeGroupIds>com.fasterxml.jackson.datatype</excludeGroupIds>-->
-<!--                    <excludeGroupIds>com.fasterxml.jackson.module</excludeGroupIds>-->
+                    <jvmArguments>--enable-preview</jvmArguments>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>13</source>
-                    <target>13</target>
+                    <release>${java.version}</release>
+                    <compilerArgs>
+                        --enable-preview
+                    </compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
     </build>
-
 </project>
